deploy/failfast-ci/manifests/ff-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: failfast-ci-worker
  name: failfast-ci-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: failfast-ci-worker
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: failfast-ci-worker
    spec:
      containers:
      - command:
        - celery
        - -A
        - hub2labhook.jobs.runner
        - worker
        - -l
        - debug
        volumeMounts:
          - name: failfast-config
            mountPath: /etc/failfast-ci
        image: quay.io/failfast-ci/failfast:v0.6.1
        imagePullPolicy: Always
        name: failfast-ci-worker
      volumes:
        - name: failfast-config
          configMap:
            name: failfast-ci
