deploy/failfast-ci/manifests/failfast-ci.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: failfast-ci
spec:
  ingressClassName: nginx
  rules:
  - host: failfast-ci.com
    http:
      paths:
      - backend:
          service:
            name: failfast-ci
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'failfast-ci.com'
    secretName: failfast-ci-tls-certs
